# volle

./: .env.example  .gitignore  AGENTS.md  PRODUCT.md  PRODUCT_VISION.md  README.md  STATUS.md  docker-compose.yml  graphic.md  index.html  package.json  pnpm-lock.yaml  setup.md  turbo.json
apps/api/: package.json
apps/api/src/: index.ts  server.ts
apps/api/src/db/: postgres.ts  redis.ts
apps/api/src/routes/: agents.ts  receipts.ts  sessions.ts  voice.ts
apps/api/src/services/: orchestrator.ts  receipt.service.ts  voice.ts
apps/api/src/websocket/: elevenlabs.ws.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AgentTimeline.tsx  SessionPanel.tsx  SummaryCard.tsx  VoiceOrb.tsx
apps/desktop/src/hooks/: useSessionState.ts  useVoiceSession.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: Home.tsx  Session.tsx
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AgentTreasuryCard.tsx  SimulationPanel.tsx
apps/web/src/lib/: demo-mode.ts  x402.ts
apps/worker-browser/: package.json  tsconfig.json
apps/worker-browser/src/: index.ts  runner.ts
apps/worker-google/: package.json
apps/worker-google/src/: calendar.ts  gmail.ts  index.ts
docker/postgres/: init.sql
docker/redis/: redis.conf
programs/solli/: Anchor.toml
(+42 files in other folders)
