[package]
name = "solli-desktop"
version = "0.1.0"
description = "Solli Desktop App"
authors = ["Solli Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.0.0-beta.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
